--- a/agent_scratch.ipynb
+++ b/agent_scratch.ipynb
@@ -34,11 +34,6 @@
     "import numpy as np\n",
     "from transformers import BitsAndBytesConfig\n",
     "\n",
-    "import dspy\n",
-    "from dspy.evaluate import Evaluate\n",
-    "from dspy.datasets.hotpotqa import HotPotQA\n",
-    "from dspy.teleprompt import BootstrapFewShotWithRandomSearch\n",
-    "\n",
     "from llama_index.core import SimpleDirectoryReader, VectorStoreIndex\n",
     "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
     "from llama_index.core import VectorStoreIndex, SimpleDirectoryReader, Settings, StorageContext\n",
@@ -46,19 +41,19 @@
     "from llama_parse import LlamaParse\n",
     "from llama_index.llms.huggingface import HuggingFaceLLM\n",
     "\n",
-    "import chromadb\n",
-    "from chromadb.utils import embedding_functions\n",
-    "from langchain.text_splitter import SentenceTransformersTokenTextSplitter\n",
+    "# import chromadb\n",
+    "# from chromadb.utils import embedding_functions\n",
+    "# from langchain.text_splitter import SentenceTransformersTokenTextSplitter\n",
     "from llama_index.readers.file import PandasExcelReader\n",
     "# CHROMA_COLLECTION_NAME = \"blockchain_and_ai\"\n",
     "# CHROMADB_DIR = \"/workspace/data/db/\"\n",
-    "# from dspy.retrieve.chromadb_rm import ChromadbRM\n",
     "\n",
+    "# from dspy.retrieve.chromadb_rm import ChromadbRM\n",
     "from typing import List, Any, Callable, Optional\n",
     "from pydantic import BaseModel\n",
     "\n",
     "import torch\n",
-    "from transformers import AutoModelForCausalLM\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "\n",
     "from train_utils import get_csv_string, randomize_row_values, operators_dict, range_description_json, split_df_by_empty_columns, split_df_by_empty_rows, print_trainable_parameters\n",
     "from models import SpreadSheetAnalyzer\n",
@@ -66,8 +61,8 @@
     "from dotenv import load_dotenv\n",
     "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
     "\n",
-    "import nest_asyncio\n",
-    "nest_asyncio.apply()\n"
+    "# import nest_asyncio\n",
+    "# nest_asyncio.apply()\n"
    ]
   },
   {
@@ -123,18 +118,6 @@
     "# model_name = \"clibrain/mamba-2.8b-instruct-openhermes\" # 8K context window\n",
     "# model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n",
     "model_name = \"mistralai/Mistral-7B-Instruct-v0.3\" # 32K context window\n",
-    "llm = dspy.HFModel(model=model_name, hf_device_map='auto', token=access_token)\n",
-    "llm.kwargs['max_new_tokens']=100\n",
-    "# llm.kwargs['repetition_penalty']=1.1\n",
-    "llm.kwargs['temperature']=None\n",
-    "llm.kwargs['do_sample']=False\n",
-    "llm.kwargs['top_k']=None\n",
-    "# llm.kwargs['typical_p']=0.9\n",
-    "\n",
-    "print('deleting model...')\n",
-    "llm.model=None\n",
-    "gc.collect()\n",
-    "print('reloading model...')\n",
     "\n",
     "quantization_config = BitsAndBytesConfig(\n",
     "        load_in_4bit=True,\n",
@@ -142,11 +125,11 @@
     "        bnb_4bit_compute_dtype=torch.float16,\n",
     ")\n",
     "\n",
-    "llm.model=AutoModelForCausalLM.from_pretrained(model_name, quantization_config=None, \n",
+    "model=AutoModelForCausalLM.from_pretrained(model_name, quantization_config=None, \n",
     "                                               trust_remote_code=True, device_map=\"auto\", \n",
     "                                               attn_implementation=\"flash_attention_2\",  \n",
     "                                               torch_dtype=torch.bfloat16)\n",
-    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "\n",
     "# from peft import LoraConfig, get_peft_model, prepare_model_for_kbit_training\n",
     "\n",
@@ -160,15 +143,14 @@
     "    \n",
     "# )\n",
     "\n",
-    "# llm.model = prepare_model_for_kbit_training(llm.model)\n",
-    "# llm.model = get_peft_model(llm.model, config)\n",
+    "# model = prepare_model_for_kbit_training(model)\n",
+    "# model = get_peft_model(model, config)\n",
     "# print_trainable_parameters(llm.model)\n",
     "\n",
     "if model_name == 'mistralai/Mistral-7B-Instruct-v0.3':\n",
-    "    llm.model.generation_config.pad_token_id = llm.tokenizer.eos_token_id\n",
-    "    llm.tokenizer.pad_token_id = llm.tokenizer.eos_token_id\n",
+    "    model.generation_config.pad_token_id = tokenizer.eos_token_id\n",
+    "    tokenizer.pad_token_id = tokenizer.eos_token_id\n",
     "\n",
-    "dspy.settings.configure(lm=llm)\n",
     "\n",
     "######## RAG model\n",
     "# chroma_client = chromadb.PersistentClient(path=CHROMADB_DIR)\n",
@@ -190,9 +172,7 @@
     "# retriever = dspy.ColBERTv2(url='http://20.102.90.50:2017/wiki17_abstracts')\n",
     "# default_ef = embedding_functions.HuggingFaceEmbeddingFunction(model_name='colbert-ir/colbertv2.0', api_key=access_token)\n",
     "# default_ef = embedding_functions.DefaultEmbeddingFunction()\n",
-    "# retriever = ChromadbRM(CHROMA_COLLECTION_NAME, CHROMADB_DIR, default_ef, k=3)\n",
-    "\n",
-    "# dspy.settings.configure(lm=llm, rm=retriever)"
+    "# retriever = ChromadbRM(CHROMA_COLLECTION_NAME, CHROMADB_DIR, default_ef, k=3)\n"
    ]
   },
   {
@@ -219,13 +199,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "!pip3 install llama-index-embeddings-text-embeddings-inference"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -234,19 +207,20 @@
     "from llama_index.core import VectorStoreIndex, get_response_synthesizer\n",
     "from llama_index.core.retrievers import VectorIndexRetriever\n",
     "from llama_index.core.query_engine import RetrieverQueryEngine\n",
+    "from llama_index.core import Document\n",
     "\n",
     "\n",
-    "# model_name = \"mistralai/Mistral-7B-Instruct-v0.3\" # 32K context window\n",
-    "model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n",
-    "tokenizer_name = model_name\n",
-    "# rm_llm = HuggingFaceLLM(model=dspy_llm.llm, tokenizer_name=tokenizer_name, is_chat_model=True, device_map='auto', max_new_tokens=50, context_window=8000)\n",
-    "rm_llm = HuggingFaceLLM(model_name=model_name, tokenizer_name=tokenizer_name, model=llm.model, is_chat_model=True, device_map='auto', max_new_tokens=50, context_window=8000)\n",
     "filepath = \"/workspace/data/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx\"\n",
     "documents = PandasExcelReader(sheet_name=\"5 - Disposition Analysis\").load_data(filepath)\n",
+    "documents = [Document(text=t) for t in final_split_dfs]\n",
     "# documents = parser.load_data(\"/workspace/data/PPM - MCG MADISON RIDGE DST.pdf\")\n",
     "print(\"Documents created\")\n",
     "\n",
-    "Settings.llm = rm_llm\n",
+    "# model_name = 'mistralai/Mistral-7B-Instruct-v0.3'\n",
+    "# tokenizer_name = model_name\n",
+    "# hf_llm = HuggingFaceLLM(model_name=model_name, tokenizer_name=tokenizer_name, is_chat_model=True, device_map='auto', max_new_tokens=2000, context_window=8000)\n",
+    "# Settings.llm = hf_llm\n",
+    "\n",
     "Settings.chunk_size = 100\n",
     "Settings.chunk_overlap = 25\n",
     "\n",
@@ -254,10 +228,10 @@
     "# embed_model_name = \"Alibaba-NLP/gte-Qwen1.5-7B-instruct\"\n",
     "embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
     "\n",
-    "# # for p in embed_model._model.named_parameters():\n",
-    "# #     p[1].requires_grad = False\n",
+    "# for p in embed_model._model.named_parameters():\n",
+    "#     p[1].requires_grad = False\n",
     "\n",
-    "# # KeywordTableSimpleRetriever\n",
+    "# KeywordTableSimpleRetriever\n",
     "# index = VectorStoreIndex.from_documents(documents, embed_model=embed_model)\n",
     "# # configure retriever\n",
     "# retriever = VectorIndexRetriever(\n",
@@ -275,38 +249,20 @@
     "# )\n",
     "\n",
     "index = VectorStoreIndex.from_documents(documents, embed_model=embed_model)\n",
-    "# index = VectorStoreIndex.from_documents(final_split_dfs, embed_model=embed_model)\n",
     "# index.storage_context.persist(persist_dir=\"/workspace/data/storage/alpha\")\n",
     "# query_engine = index.as_query_engine(llm=rm_llm)\n",
+    "\n",
     "query_engine = index.as_retriever(similarity_top_k=2)\n",
     "\n",
-    "# Settings.embed_model = embed_model\n",
-    "\n",
-    "# index.set_index_id(\"vector_index\")\n",
-    "# index.storage_context.persist(\"/workspace/data/storage\")\n",
-    "# storage_context = StorageContext.from_defaults(persist_dir=\"/workspace/data/storage\")\n",
-    "# index = load_index_from_storage(storage_context, index_id=\"vector_index\")\n",
-    "# query_engine = index.as_query_engine(response_mode=\"tree_summarize\")"
+    "# Settings.embed_model = embed_model\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "dspy_llm = DspyLlamaIndexWrapper(rm_llm, model_type='chat', max_new_tokens=30)\n",
-    "dspy.settings.configure(lm=dspy_llm)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Question: Get the value for Return of Maximum Offering Amount.\n",
-    "# Extracted values: Return of Maximum Offering Amount: 44386706.96773932\n",
-    "# Question: What is the return on maximum offering amount? Please provide a floating point number less than zero.\n",
-    "# Extracted values: Return of Maximum Offering Amount: -77670566.54709445"
+    "from llama_index.core.agent import ReActAgent\n",
+    "agent = ReActAgent.from_tools([], llm=hf_llm, verbose=True)"
    ]
   },
   {
@@ -314,14 +270,6 @@
    "metadata": {},
    "source": [
     "# Fine Tuning"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "import sys\n",
-    "sys.setrecursionlimit(10000)"
    ]
   },
   {
@@ -358,12 +306,127 @@
     "    \n",
     "    for value_to_extract in gt_collect:\n",
     "\n",
-    "        question = f\"Extract the value for the variable name '{value_to_extract}'?\"\n",
+    "        question = f\"What is the value for the variable name '{value_to_extract}'?\"\n",
     "        answer = f\"{value_to_extract}: {gt_collect[value_to_extract]}\"\n",
-    "        train_data.append(dspy.Example(question=question, answer=answer).with_inputs('question'))\n",
+    "        train_data.append((question,answer)) \n",
     "    \n",
-    "random.shuffle(train_data)\n"
+    "# random.shuffle(train_data)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to concatenate the elements of a list\n",
+    "def concatenate_list_data(list):\n",
+    "    result= ''\n",
+    "    for element in list:\n",
+    "        result += str(element)\n",
+    "    return result\n",
+    "\n",
+    "# function to concatenate the context and question\n",
+    "def concatenate_context_question(context, question):\n",
+    "    result= ''\n",
+    "    for element in context:\n",
+    "        result += str(element)\n",
+    "    context_message = \" Use the following information to answer the question: \\n\" + result + \"\\n\" + \"Only return the name and value in this format: (e.g. Net Operating Income: 3640565.37585).\"\n",
+    "    return question + context_message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from train_utils import operators_dict, range_description_json\n",
+    "for i in range(17):\n",
+    "    example = train_data[i]\n",
+    "    question = example[0]\n",
+    "    target  = example[1]\n",
+    "    retrieved_data = query_engine.retrieve(question)\n",
+    "    context = [x.get_content() for x in retrieved_data]\n",
+    "    context = concatenate_context_question(context, question)\n",
+    "    messages = [#{'role': 'system', 'content': \"Only return the value of the variable requested (e.g. 0.0525, 3640565.37585).\"},\n",
+    "                {'role': 'user', 'content': context}]\n",
+    "    input_ids = tokenizer.apply_chat_template(messages, return_tensors='pt')\n",
+    "    answer = model.generate(input_ids.to(model.device), max_length=1000, num_return_sequences=1, pad_token_id=tokenizer.eos_token_id, eos_token_id=tokenizer.eos_token_id, do_sample=True, top_k=50, top_p=0.95, temperature=0.7)\n",
+    "    dec = tokenizer.decode(answer[0], skip_special_tokens=True)\n",
+    "    print(dec.split(context)[-1].strip(), target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import operator\n",
+    "\n",
+    "def is_float(s):\n",
+    "    try:\n",
+    "        float(s)\n",
+    "        return True\n",
+    "    except ValueError:\n",
+    "        return False\n",
+    "\n",
+    "def is_in_range(value, bounds, ops=(operator.ge, operator.le)):\n",
+    "    \"\"\"\n",
+    "    Check if a value falls within a range based on the provided operators.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - value: The float value to check.\n",
+    "    - lower: The lower and upper bounds limit of the range.\n",
+    "    - ops: A tuple of two functions from the operator module, where\n",
+    "           ops[0] is used for comparing the value with the lower limit,\n",
+    "           and ops[1], if upper is not None, for comparing the value with the upper limit.\n",
+    "           Defaults to greater than or equal to for lower and less than or equal to for upper.\n",
+    "           \n",
+    "    Returns:\n",
+    "    - True if the value is within the range based on the operators; False otherwise.\n",
+    "    \"\"\"\n",
+    "    if len(bounds)==2: lower, upper = bounds\n",
+    "    else: lower, upper = bounds[0], None\n",
+    "    if upper is None:\n",
+    "        return ops[0](value, lower)\n",
+    "    else:\n",
+    "        return ops[0](value, lower) and ops[1](value, upper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parsed_name, parsed_value = dec.split(context)[-1].strip().split(\": \")\n",
+    "valid_format_tf = is_in_range(float(parsed_value), \n",
+    "                            bounds=operators_dict[parsed_name]['bounds'], \n",
+    "                            ops=operators_dict[parsed_name]['operators'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
