--- a/agent_scratch.ipynb
+++ b/agent_scratch.ipynb
@@ -23,9 +23,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/pydantic/_internal/_fields.py:161: UserWarning: Field \"model_id\" has conflict with protected namespace \"model_\".\n",
+      "\n",
+      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import gc\n",
     "import os\n",
@@ -67,9 +88,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/numpy/core/fromnumeric.py:57: FutureWarning: 'DataFrame.swapaxes' is deprecated and will be removed in a future version. Please use 'DataFrame.transpose' instead.\n",
+      "  return bound(*args, **kwds)\n",
+      "/usr/local/lib/python3.10/dist-packages/numpy/core/fromnumeric.py:57: FutureWarning: 'DataFrame.swapaxes' is deprecated and will be removed in a future version. Please use 'DataFrame.transpose' instead.\n",
+      "  return bound(*args, **kwds)\n",
+      "/usr/local/lib/python3.10/dist-packages/numpy/core/fromnumeric.py:57: FutureWarning: 'DataFrame.swapaxes' is deprecated and will be removed in a future version. Please use 'DataFrame.transpose' instead.\n",
+      "  return bound(*args, **kwds)\n",
+      "/usr/local/lib/python3.10/dist-packages/numpy/core/fromnumeric.py:57: FutureWarning: 'DataFrame.swapaxes' is deprecated and will be removed in a future version. Please use 'DataFrame.transpose' instead.\n",
+      "  return bound(*args, **kwds)\n",
+      "/usr/local/lib/python3.10/dist-packages/numpy/core/fromnumeric.py:57: FutureWarning: 'DataFrame.swapaxes' is deprecated and will be removed in a future version. Please use 'DataFrame.transpose' instead.\n",
+      "  return bound(*args, **kwds)\n",
+      "/usr/local/lib/python3.10/dist-packages/numpy/core/fromnumeric.py:57: FutureWarning: 'DataFrame.swapaxes' is deprecated and will be removed in a future version. Please use 'DataFrame.transpose' instead.\n",
+      "  return bound(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "filepath = \"/workspace/data/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx\"\n",
     "disposition_inputs = [\n",
@@ -104,9 +144,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first model load...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a741eb907ebf46819e2186428a6e6ffa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "access_token = os.getenv('HF_TOKEN')\n",
     "llama_api_key = os.getenv('LLAMA_API_KEY')\n",
@@ -177,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,9 +262,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Documents created\n"
+     ]
+    }
+   ],
    "source": [
     "from llama_index.core import VectorStoreIndex, get_response_synthesizer\n",
     "from llama_index.core.retrievers import VectorIndexRetriever\n",
@@ -274,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,11 +407,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask is not set and cannot be inferred from input because pad token is same as eos token.As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selling Costs: -3096260.7140557235 Selling Costs: 0.01\n",
+      "Disposition Fee: -2211614.795754088 Disposition Fee: 0.025\n",
+      "Net Operating Income: 4644391.071083585 Net Operating Income: 4644391.071083585\n",
+      "Projected Terminal Cap Rate: 0.0525 Projected Terminal Cap Rate: 0.0525\n",
+      "Loan Assumption/Payoff: 0 Loan Assumption/Payoff: 0\n",
+      "Return of Forecasted Reserves: 0 Return of Forecasted Reserves: 0\n",
+      "Return of Maximum Offering Amount: -77670566.54709445 Return of Maximum Offering Amount: -77670566.54709445\n",
+      "Cashflows 1: 3717508.8156313607 Cashflows 1: 3495000\n",
+      "Cashflows 2: 3717508.8156313607 Cashflows 2: 3530850\n",
+      "Cashflows 3: 3567058.5 Cashflows 3: 3567058.5\n",
+      "Cashflows 4: 3603629.085 Cashflows 4: 3603629.085\n",
+      "Cashflows 5: 3640565.37585 Cashflows 5: 3640565.37585\n",
+      "Cashflows 6: 3677871.0296085 Cashflows 6: 3677871.0296085\n",
+      "Cashflows 7: 3717508.8156313607 Cashflows 7: 3717508.8156313607\n",
+      "Cashflows 8: 3767450 Cashflows 8: 3767450.5411334764\n",
+      "Cashflows 9: 3818454.663488038 Cashflows 9: 3818454.663488038\n",
+      "NPV (Net Present Value): 3870554.3880146043 CF Y 11: 3870554.3880146043\n"
+     ]
+    }
+   ],
    "source": [
     "from train_utils import operators_dict, range_description_json\n",
+    "collect = []\n",
     "for i in range(17):\n",
     "    example = train_data[i]\n",
     "    question = example[0]\n",
@@ -352,10 +454,63 @@
     "    messages = [#{'role': 'system', 'content': \"Only return the value of the variable requested (e.g. 0.0525, 3640565.37585).\"},\n",
     "                {'role': 'user', 'content': context}]\n",
     "    input_ids = tokenizer.apply_chat_template(messages, return_tensors='pt')\n",
-    "    answer = model.generate(input_ids.to(model.device), max_length=1000, num_return_sequences=1, pad_token_id=tokenizer.eos_token_id, eos_token_id=tokenizer.eos_token_id, do_sample=True, top_k=50, top_p=0.95, temperature=0.7)\n",
+    "    answer = model.generate(input_ids.to(model.device), max_length=1000, num_return_sequences=1, pad_token_id=tokenizer.eos_token_id, eos_token_id=tokenizer.eos_token_id, do_sample=True, top_k=50, top_p=0.95, temperature=1.3)\n",
     "    dec = tokenizer.decode(answer[0], skip_special_tokens=True)\n",
-    "    print(dec.split(context)[-1].strip(), target)"
+    "    print(dec.split(context)[-1].strip(), target)\n",
+    "    collect.append(dec.split(context)[-1].strip() == target)\n",
+    "    \n",
+    "print(np.mean(collect))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6470588235294118"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check var name\n",
+    "# check var value is float\n",
+    "# check var value is in range\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
