neo4j working but sloooooooooow

--- a/dspy_ollama_llamaindex.ipynb
+++ b/dspy_ollama_llamaindex.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "!cp '/workspace/repos/agentic-ai/PPM - MCG MADISON RIDGE DST.pdf' /workspace/data\n",
     "!cp '/workspace/repos/agentic-ai/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx' /workspace/data\n",
-    "!pip3 install llama-index llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-huggingface-api llama-index-llms-ollama llama-index-embeddings-ollama\n",
+    "!pip3 install llama-index llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-huggingface-api llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j\n",
     "!pip3 install openpyxl sentencepiece protobuf evaluate rouge_score absl-py tensorboardX bitsandbytes peft accelerate python-dotenv dspy-ai InstructorEmbedding\n",
     "!pip3 install flash-attn --no-build-isolation\n",
     "!curl -L https://ollama.com/download/ollama-linux-amd64 -o /usr/bin/ollama\n",
@@ -25,16 +25,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# https://www.ecfr.gov/developers/documentation/api/v1#/Versioner%20Service/get_api_versioner_v1_full__date__title__title__xml\n",
+    "\n",
     "# !cd /workspace/data && curl -X GET \"https://www.ecfr.gov/api/versioner/v1/full/2024-07-23/title-17.xml?chapter=II&part=200&subpart=A&section=200.1\" -H \"accept: application/xml\"\n",
-    "!cd /workspace/data && curl -X GET \"https://www.ecfr.gov/api/versioner/v1/full/2024-07-23/title-17.xml?chapter=II&part=200\" -H \"accept: application/xml\""
+    "# !cd /workspace/data && curl -X GET \"https://www.ecfr.gov/api/versioner/v1/full/2024-07-23/title-17.xml?chapter=II&part=200\" -H \"accept: application/xml\"\n",
+    "!cd /workspace/data && curl -X GET \"https://www.ecfr.gov/api/versioner/v1/full/2024-07-23/title-17.xml?chapter=II\" -H \"accept: application/xml\" > title-17.xml"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# https://www.ecfr.gov/developers/documentation/api/v1#/Versioner%20Service/get_api_versioner_v1_full__date__title__title__xml\n",
-    "!cd /workspace/data && curl -X GET \"https://www.ecfr.gov/api/versioner/v1/full/2024-07-23/title-17.xml?chapter=II\" -H \"accept: application/xml\" > title-17.xml"
+    "!cd /workspace/data && curl -X GET \"https://api.finra.org/data/group/finra/name/finraRulebookMock?offset=0&limit=10000&delimiter=%2C&quoteValues=true&async=false&access_token=ae4bfc7741084e2c9944\" -H  \"accept: application/json\" -H  \"Content-Type: application/json\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "!wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg\n",
+    "!echo 'deb [signed-by=/etc/apt/keyrings/neotechnology.gpg] https://debian.neo4j.com stable latest' | tee -a /etc/apt/sources.list.d/neo4j.list\n",
+    "\n",
+    "!apt-get update\n",
+    "!apt list -a neo4j\n",
+    "!add-apt-repository universe -y\n",
+    "!apt-get install neo4j=1:5.22.0 -y\n",
+    "!echo \"neo4j-enterprise neo4j/question select I ACCEPT\" | debconf-set-selections\n",
+    "!echo \"neo4j-enterprise neo4j/license note\" | debconf-set-selections\n",
+    "!apt remove openjdk-21-jre-headless -y\n",
+    "!apt install openjdk-17-jre -y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# apoc plugin needs to go in /var/lib/neo4j/plugins\n",
+    "#### NOTE #### neo4j and apoc versions must match!!!!!!\n",
+    "# wget https://github.com/neo4j/apoc/releases/download/5.22.0/apoc-5.22.0-core.jar\n",
+    "\n",
+    "# in vim /etc/neo4j/neo4j.conf add the following lines\n",
+    "# dbms.security.procedures.allowlist=apoc.*\n",
+    "# dbms.security.procedures.unrestricted=apoc.*"
    ]
   },
   {
@@ -48,6 +82,7 @@
     "import dspy\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
     "from train_utils import get_csv_string, randomize_row_values, operators_dict, range_description_json, split_df_by_empty_columns, split_df_by_empty_rows, print_trainable_parameters\n"
    ]
   },
@@ -131,7 +166,7 @@
     "from llama_index.llms.ollama import Ollama\n",
     "\n",
     "# model_name = \"mistral:latest\"\n",
-    "model_name = \"llama3.1\"\n",
+    "model_name = \"llama3.1:latest\"\n",
     "# model_name = \"qwen2:1.5b\"\n",
     "# model_name = \"gemma:1.5b\"\n",
     "\n",
@@ -141,15 +176,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "model_name, num_ctx = \"llama3.1\", 128000\n",
+    "llm = dspy.OllamaLocal(model=model_name, max_new_tokens=1000, max_tokens=4000, temperature=0.0, num_ctx=num_ctx, model_type='chat')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model_name = \"qwen2:1.5b\", \n",
-    "# model_name = \"mistral:latest\", 32000\n",
-    "model_name, num_ctx = \"llama3.1\", 128000\n",
-    "llm = dspy.OllamaLocal(model=model_name, max_new_tokens=1000, max_tokens=4000, temperature=0.0, num_ctx=num_ctx, model_type='chat')"
+    "import os, dotenv\n",
+    "from llama_index.graph_stores.neo4j import Neo4jPropertyGraphStore\n",
+    "dotenv.load_dotenv(\"/workspace/repos/agentic-ai/.env\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -179,6 +223,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Literal\n",
+    "from llama_index.core.indices.property_graph import SchemaLLMPathExtractor\n",
+    "\n",
+    "entities = Literal[\"RULES\", \"REGULATIONS\"]\n",
+    "relations = Literal[\n",
+    "    \"RELATED_TO\",\n",
+    "    \"REFERENCED_BY\",\n",
+    "    \"REFERS_TO\",\n",
+    "]\n",
+    "all_relations = [\n",
+    "    \"RELATED_TO\",\n",
+    "    \"REFERENCED_BY\",\n",
+    "    \"REFERS_TO\",\n",
+    "]\n",
+    "\n",
+    "validation_schema = {\n",
+    "    \"Rules\": all_relations,\n",
+    "    \"Regulations\": all_relations\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "import torch\n",
     "from llama_index.llms.huggingface_api import HuggingFaceInferenceAPI\n",
@@ -186,7 +257,7 @@
     "# from llama_index.embeddings.instructor import InstructorEmbedding\n",
     "\n",
     "from llama_index.llms.huggingface import HuggingFaceLLM\n",
-    "from llama_index.core import VectorStoreIndex, SimpleDirectoryReader, Settings\n",
+    "from llama_index.core import VectorStoreIndex, SimpleDirectoryReader, Settings, PropertyGraphIndex\n",
     "from llama_index.readers.file import PandasExcelReader\n",
     "from llama_index.core import set_global_tokenizer, Document\n",
     "from llama_index.core.embeddings import resolve_embed_model\n",
@@ -212,13 +283,23 @@
     "Settings.llm = llm\n",
     "\n",
     "Settings.chunk_size = 400\n",
-    "Settings.chunk_overlap = 100\n",
+    "Settings.chunk_overlap = 50\n",
     "embed_model_name = \"Alibaba-NLP/gte-Qwen2-1.5B-instruct\"\n",
     "# embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
     "# embed_model_name = \"hkunlp/instructor-base\"\n",
     "print(\"loading embed model...\")\n",
     "embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
     "# embed_model = InstructorEmbedding(model_name=embed_model_name)\n",
+    "\n",
+    "Settings.embed_model = embed_model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "print('loading data to vector store...')\n",
     "\n",
@@ -233,12 +314,48 @@
     "    documents = [Document(text=t, \n",
     "                        metadata=get_metadata(m),\n",
     "                        excluded_llm_metadata_keys=[\"title\", \"chapter\"],) for m,t in data.items()]\n",
-    "    vector_index = VectorStoreIndex.from_documents(documents, embed_model=embed_model)\n",
+    "    \n",
+    "    from llama_index.core import PropertyGraphIndex\n",
+    "\n",
+    "    kg_extractor = SchemaLLMPathExtractor(\n",
+    "        llm=llm,\n",
+    "        possible_entities=entities,\n",
+    "        possible_relations=relations,\n",
+    "        kg_validation_schema=validation_schema,\n",
+    "        # if false, allows for values outside of the schema\n",
+    "        # useful for using the schema as a suggestion\n",
+    "        num_workers=4,\n",
+    "        strict=False,\n",
+    "    )\n",
+    "\n",
+    "    # from llama_index.core.indices.property_graph import SimpleLLMPathExtractor\n",
+    "\n",
+    "    # kg_extractor = SimpleLLMPathExtractor(\n",
+    "    #     llm=llm,\n",
+    "    #     max_paths_per_chunk=10,\n",
+    "    #     num_workers=10,\n",
+    "    # )\n",
+    "\n",
+    "    NUMBER_OF_ARTICLES = 50\n",
+    "\n",
+    "    neo_url = \"bolt://localhost:7687\"\n",
+    "    graph_store = Neo4jPropertyGraphStore(\n",
+    "        username=\"neo4j\",\n",
+    "        password=os.getenv(\"NEO4J_PWD\"),\n",
+    "        url=neo_url\n",
+    "    )\n",
+    "\n",
+    "    vector_index = PropertyGraphIndex.from_documents(documents[:NUMBER_OF_ARTICLES], \n",
+    "                                                     llm=llm,\n",
+    "                                                     property_graph_store=graph_store, \n",
+    "                                                     embed_model=embed_model, \n",
+    "                                                     kg_extractors=[kg_extractor],\n",
+    "                                                     show_progress=True)\n",
+    "    # vector_index = VectorStoreIndex.from_documents(documents, embed_model=embed_model, show_progress=True)\n",
     "    vector_index.storage_context.persist(persist_dir=persist_dir)\n",
     "\n",
     "# query_engine = vector_index.as_retriever(similarity_top_k=3)\n",
-    "query_engine = vector_index.as_query_engine(similarity_top_k=3)\n",
-    "Settings.embed_model = embed_model\n"
+    "query_engine = vector_index.as_query_engine(similarity_top_k=3)\n"
    ]
   },
   {
