cleaned up neo4j stuff

--- a/dspy_ollama_llamaindex.ipynb
+++ b/dspy_ollama_llamaindex.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!cp '/workspace/repos/agentic-ai/PPM - MCG MADISON RIDGE DST.pdf' /workspace/data\n",
-    "!cp '/workspace/repos/agentic-ai/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx' /workspace/data\n",
+    "# !cp '/workspace/repos/agentic-ai/PPM - MCG MADISON RIDGE DST.pdf' /workspace/data\n",
+    "# !cp '/workspace/repos/agentic-ai/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx' /workspace/data\n",
     "!pip3 install llama-index llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-huggingface-api llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j\n",
     "!pip3 install openpyxl sentencepiece protobuf evaluate rouge_score absl-py tensorboardX bitsandbytes peft accelerate python-dotenv dspy-ai InstructorEmbedding\n",
     "!pip3 install flash-attn --no-build-isolation\n",
@@ -19,6 +19,13 @@
    "metadata": {},
    "source": [
     "Install tmux, open new screen and run `ollama start`, and then `ollama pull qwen2:1.5b`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "!ollama pull llama3.1:latest"
    ]
   },
   {
@@ -43,17 +50,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg\n",
+    "!wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg -y\n",
     "!echo 'deb [signed-by=/etc/apt/keyrings/neotechnology.gpg] https://debian.neo4j.com stable latest' | tee -a /etc/apt/sources.list.d/neo4j.list\n",
     "\n",
     "!apt-get update\n",
+    "!apt install apt-utils -y\n",
     "!apt list -a neo4j\n",
     "!add-apt-repository universe -y\n",
     "!apt-get install neo4j=1:5.22.0 -y\n",
     "!echo \"neo4j-enterprise neo4j/question select I ACCEPT\" | debconf-set-selections\n",
     "!echo \"neo4j-enterprise neo4j/license note\" | debconf-set-selections\n",
     "!apt remove openjdk-21-jre-headless -y\n",
-    "!apt install openjdk-17-jre -y"
+    "!apt install openjdk-17-jre -y\n",
+    "!cd /var/lib/neo4j/plugins/ && wget https://github.com/neo4j/apoc/releases/download/5.22.0/apoc-5.22.0-core.jar\n"
    ]
   },
   {
@@ -77,6 +86,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('/workspace/repos/agentic-ai')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from llama_index.llms.ollama import Ollama\n",
     "from llama_index.embeddings.ollama import OllamaEmbedding\n",
     "import dspy\n",
@@ -84,6 +103,15 @@
     "import pandas as pd\n",
     "\n",
     "from train_utils import get_csv_string, randomize_row_values, operators_dict, range_description_json, split_df_by_empty_columns, split_df_by_empty_rows, print_trainable_parameters\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cd /workspace/data && curl -X GET \"https://www.ecfr.gov/api/versioner/v1/full/2024-07-23/title-17.xml?chapter=II\" -H \"accept: application/xml\" > title-17.xml"
    ]
   },
   {
@@ -111,8 +139,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def get_tree_data(element, depth=0, list_depth=0, prev_depth=-1, lists=None, final_dict=None):\n",
     "    if lists is None:\n",
     "        lists = [[]]\n",
@@ -191,9 +217,7 @@
    "source": [
     "import os, dotenv\n",
     "from llama_index.graph_stores.neo4j import Neo4jPropertyGraphStore\n",
-    "dotenv.load_dotenv(\"/workspace/repos/agentic-ai/.env\")\n",
-    "\n",
-    "\n"
+    "dotenv.load_dotenv(\"/workspace/repos/agentic-ai/.env\")"
    ]
   },
   {
@@ -288,10 +312,19 @@
     "# embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
     "# embed_model_name = \"hkunlp/instructor-base\"\n",
     "print(\"loading embed model...\")\n",
-    "embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
+    "embed_model = HuggingFaceEmbedding(model_name=embed_model_name, device='cpu')\n",
     "# embed_model = InstructorEmbedding(model_name=embed_model_name)\n",
     "\n",
     "Settings.embed_model = embed_model\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* FIRST set password for database `neo4j-admin dbms set-initial-password <PASSWORD>`\n",
+    "\n",
+    "* THEN start neo4j in terminal or tmux screen `neo4j start`"
    ]
   },
   {
